dnl
dnl "$Id$"
dnl
dnl   Configuration script for the Common UNIX Printing System (CUPS).
dnl
dnl   Copyright 2007 by Apple Inc.
dnl   Copyright 1997-2007 by Easy Software Products, all rights reserved.
dnl
dnl   These coded instructions, statements, and computer programs are the
dnl   property of Apple Inc. and are protected by Federal copyright
dnl   law.  Distribution and use rights are outlined in the file "LICENSE.txt"
dnl   which should have been included with this file.  If this file is
dnl   file is missing or damaged, see the license at "http://www.cups.org/".
dnl

AC_INIT(cups/cups.h)

sinclude(config-scripts/cups-opsys.m4)
sinclude(config-scripts/cups-common.m4)
sinclude(config-scripts/cups-directories.m4)
sinclude(config-scripts/cups-manpages.m4)

sinclude(config-scripts/cups-3264.m4)
sinclude(config-scripts/cups-sharedlibs.m4)
sinclude(config-scripts/cups-libtool.m4)
sinclude(config-scripts/cups-compiler.m4)

sinclude(config-scripts/cups-image.m4)
sinclude(config-scripts/cups-network.m4)
sinclude(config-scripts/cups-poll.m4)
sinclude(config-scripts/cups-slp.m4)
sinclude(config-scripts/cups-gssapi.m4)
sinclude(config-scripts/cups-ldap.m4)
sinclude(config-scripts/cups-ssl.m4)
sinclude(config-scripts/cups-pam.m4)
sinclude(config-scripts/cups-threads.m4)
sinclude(config-scripts/cups-largefile.m4)
sinclude(config-scripts/cups-dnssd.m4)
sinclude(config-scripts/cups-launchd.m4)
sinclude(config-scripts/cups-defaults.m4)
sinclude(config-scripts/cups-pap.m4)
sinclude(config-scripts/cups-pdf.m4)
sinclude(config-scripts/cups-scripting.m4)

INSTALL_LANGUAGES=""
UNINSTALL_LANGUAGES=""
LANGFILES=""
if test "x$LANGUAGES" != x; then
	INSTALL_LANGUAGES="install-languages"
	UNINSTALL_LANGUAGES="uninstall-languages"
	for lang in $LANGUAGES; do
		if test -f doc/$lang/index.html.in; then
			LANGFILES="$LANGFILES doc/$lang/index.html"
		fi

		if test -f templates/$lang/header.tmpl.in; then
			LANGFILES="$LANGFILES templates/$lang/header.tmpl"
		fi
	done
fi

AC_SUBST(INSTALL_LANGUAGES)
AC_SUBST(UNINSTALL_LANGUAGES)

AC_OUTPUT(Makedefs packaging/cups.list init/cups.sh init/cups-lpd cups-config
	  conf/cupsd.conf conf/mime.convs conf/pam.std conf/snmp.conf
	  desktop/cups.desktop
	  doc/index.html doc/help/ref-cupsd-conf.html doc/help/standard.html
	  init/org.cups.cups-lpd.plist init/cups.xml
	  man/client.conf.man man/cups-deviced.man man/cups-driverd.man
	  man/cups-lpd.man man/cupsaddsmb.man man/cupsd.man
	  man/cupsd.conf.man man/drv.man man/lpoptions.man
	  templates/header.tmpl
	  $LANGFILES)

chmod +x cups-config

dnl
dnl End of "$Id$".
dnl
