dnl
dnl "$Id: configure.in,v 1.1.2.2 2002/03/22 16:01:37 mike Exp $"
dnl
dnl   Configuration script for the Common UNIX Printing System (CUPS).
dnl
dnl   Copyright 1997-2002 by Easy Software Products, all rights reserved.
dnl
dnl   These coded instructions, statements, and computer programs are the
dnl   property of Easy Software Products and are protected by Federal
dnl   copyright law.  Distribution and use rights are outlined in the file
dnl   "LICENSE.txt" which should have been included with this file.  If this
dnl   file is missing or damaged please contact Easy Software Products
dnl   at:
dnl
dnl       Attn: CUPS Licensing Information
dnl       Easy Software Products
dnl       44141 Airport View Drive, Suite 204
dnl       Hollywood, Maryland 20636-3111 USA
dnl
dnl       Voice: (301) 373-9603
dnl       EMail: cups-info@cups.org
dnl         WWW: http://www.cups.org
dnl

AC_INIT(ipp.h)

sinclude(../config-scripts/cups-opsys.m4)
sinclude(../config-scripts/cups-common.m4)
sinclude(../config-scripts/cups-directories.m4)
sinclude(../config-scripts/cups-manpages.m4)

sinclude(../config-scripts/cups-sharedlibs.m4)
sinclude(../config-scripts/cups-libtool.m4)
sinclude(../config-scripts/cups-compiler.m4)

sinclude(../config-scripts/cups-network.m4)
sinclude(../config-scripts/cups-openssl.m4)

AC_OUTPUT(ipp.list.in config.h Makedefs Makefile)

dnl
dnl End of "$Id: configure.in,v 1.1.2.2 2002/03/22 16:01:37 mike Exp $".
dnl
