#
# "$Id: configure.in 12273 2014-11-20 17:58:48Z msweet $"
#
#   Configure script for build tools.
#
#   Copyright 2007-2008 by Apple Inc.
#   Copyright 1997-2007 by Easy Software Products, all rights reserved.
#
#   These coded instructions, statements, and computer programs are the
#   property of Apple Inc. and are protected by Federal copyright
#   law.  Distribution and use rights are outlined in the file "LICENSE.txt"
#   which should have been included with this file.  If this file is
#   file is missing or damaged, see the license at "http://www.cups.org/".
#

AC_INIT(Makefile.in)

sinclude(../config-scripts/compiler.m4)

AC_SEARCH_LIBS(socket,socket)
AC_SEARCH_LIBS(gethostbyname,nsl)

AC_OUTPUT(Makefile)

#
# End of "$Id: configure.in 12273 2014-11-20 17:58:48Z msweet $".
#
